fix comment overflowing

--- a/app/globals.css
+++ b/app/globals.css
@@ -160,19 +160,13 @@ h4 {
   list-style: square !important;
 }
 
-#comment-body {
-  @apply xsm:!max-w-[80%]  max-w-full;
-}
-
 #comment-body ul {
   @apply xsm:!pl-4 !pl-6 md:!pl-8;
 }
 #comment-body a {
   @apply text-blue-500 cursor-pointer hover:underline break-words whitespace-pre-wrap;
 }
-#comment-body details[open] {
-  @apply xsm:max-w-[90%];
-}
+
 #comment-body img {
   max-width: 200px;
   max-height: 150px;
@@ -272,6 +266,7 @@ div.arrow-up {
   font-weight: 100;
   font-size: 12px;
   overflow-x: auto;
+  word-wrap: pre-wrap;
 }
 
 /* style for like animation */
